@@ -1,3 +1,5 @@
 uidir = $(datadir)/mcus
-ui_DATA = mcus.ui
+ui_DATA = \
+	mcus.ui			\
+	ocr-assembly.lang
 EXTRA_DIST = $(ui_DATA)
